# sent-xrec

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
conf/: cer.yaml  cer_dev.yaml  common.yaml  erra.yaml  erra_dev.yaml  logger.yaml  pepler.yaml  pepler_d.yaml  pepler_d_dev.yaml  pepler_dev.yaml  peter.yaml  peter_dev.yaml
datasets/: README.md
src/: main.py
src/loaders/: common.py  helpers.py  loader.py  tools.py
src/metrics/: tools.py
src/models/: cer.py  common.py  erra.py  pepler.py  pepler_d.py  peter.py
src/scripts/: download_all.sh  download_amazon_kindle.sh  download_amazon_movie.sh
src/utils/: helpers.py  tools.py
